added modal for cart

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "@heroicons/vue": "^1.0.3",
         "bootstrap": "^4.6.0",
         "bootstrap-vue": "^2.21.2",
         "vuex": "^4.0.2"
